# 1brc

./: Cargo.toml  README.md  perf_measure.sh
benches/: split.rs
src/: main.rs
