[package]
name = "challange_1brc"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 2

[[bench]]
name = "split"
harness = false

[dependencies]
libc = {version = "0.2.155"}
algorithms = { git = "https://github.com/SuperioOne/algorithms.git" } 

[dev-dependencies]
criterion = { version = "0.5.1" }
